syntax = "proto3";

package pb;

option go_package = "fuse-client/internal/pb";

import "google/protobuf/timestamp.proto";

// CoordinatorService handles peer registration and file location metadata.
service CoordinatorService {
  rpc RegisterPeer(RegisterPeerRequest) returns (RegisterPeerResponse);
  rpc GetPeers(GetPeersRequest) returns (GetPeersResponse);
  rpc UpdatePeerStatus(UpdatePeerStatusRequest) returns (UpdatePeerStatusResponse);
  rpc GetFileLocation(GetFileLocationRequest) returns (GetFileLocationResponse);
  rpc UpdateFileLocation(UpdateFileLocationRequest) returns (UpdateFileLocationResponse);
  rpc GetPeerStats(GetPeerStatsRequest) returns (GetPeerStatsResponse);
}

message PeerInfo {
  string id = 1;
  string address = 2;
  string grpc_address = 3;
  string nvme_path = 4;
  int64 available_space = 5;
  int64 used_space = 6;
  string status = 7;
  google.protobuf.Timestamp last_heartbeat = 8;
}

message ChunkInfo {
  int32 index = 1;
  string peer_id = 2;
  string chunk_id = 3;
}

message FileLocation {
  string file_path = 1;
  string peer_id = 2;
  string storage_tier = 3;
  string storage_path = 4;
  int64 file_size = 5;
  google.protobuf.Timestamp last_accessed = 6;
  bool is_chunked = 7;
  repeated ChunkInfo chunks = 8;
}

message RegisterPeerRequest {
  PeerInfo peer = 1;
}

message RegisterPeerResponse {}

message GetPeersRequest {
  string requester_id = 1;
}

message GetPeersResponse {
  repeated PeerInfo peers = 1;
}

message UpdatePeerStatusRequest {
  string peer_id = 1;
  string status = 2;
  int64 available_space = 3;
  int64 used_space = 4;
}

message UpdatePeerStatusResponse {}

message GetFileLocationRequest {
  string file_path = 1;
}

message GetFileLocationResponse {
  repeated FileLocation locations = 1;
}

message UpdateFileLocationRequest {
  FileLocation location = 1;
}

message UpdateFileLocationResponse {}

message GetPeerStatsRequest {}

message GetPeerStatsResponse {
  int64 active_peers = 1;
  int64 total_peers = 2;
  int64 total_space = 3;
  int64 used_space = 4;
  int64 available_space = 5;
  int64 file_count = 6;
}
